--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="row">
       <div class="large-12 columns">
-        <h1>Name Goes Here</h1>
+        <h1 class="main-header">Name Goes Here</h1>
         <h2>Job Title Goes Here</h2>
       </div>
     </div>
