Changes to header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     <div class="row">
       <div class="large-12 columns">
-        <h1 class="main-header">Name Goes Here</h1>
-        <h2>Job Title Goes Here</h2>
+        <h1 class="main-header">Nick Neyland</h1>
+        <h2>Writer, Editor, Web Developer</h2>
       </div>
     </div>  
     <div class="row">
