--- a/index.html
+++ b/index.html
@@ -6,50 +6,81 @@
     <title>Nick Neyland</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/vendor/modernizr.js"></script>
-    <script src="js/custom.js"></script>
   </head>
   <body>
     <header>
-      <div class="row">
+     <!-- <div class="row">
         <div class="large-12 columns">
           <h1>Nick Neyland</h1>
           <h2>Writer, Editor, Web Developer</h2>
         </div>
-      </div>  
+      </div>  -->
     </header>
-    <div class="row">
+    <div class="row body-text">
       <div class="large-12 columns main-body">
         <div class="large-4 columns">
-          <a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">About</a>
-              <ul id="hover1" class="f-dropdown" data-dropdown-content>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
-              </ul>
-        </div>
-        <div class="large-4 columns">
-          <a href="#" data-dropdown="hover2" data-options="is_hover:true; hover_timeout:5000">Writing</a>
-              <ul id="hover2" class="f-dropdown" data-dropdown-content>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
-              </ul>
-        </div>
-        <div class="large-4 columns">
-          <a href="#" data-dropdown="hover3" data-options="is_hover:true; hover_timeout:5000">Contact</a>
-              <ul id="hover3" class="f-dropdown" data-dropdown-content>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</li>
-              </ul>
+          <nav>
+              <ul>
+                <li class="dropdown">
+                  <a href="#" class="body-header">email</a>
+                  <h3 class="mobile-header">email</h3>
+                    <ul class="sub-menu email-menu">
+                      <li>nickneyland at</li>
+                      <li>gmail dot com</a></li>
+                    </ul>
+                    <ul class="mobile-menu email-menu">
+                      <li>nickneyland at</li>
+                      <li>gmail dot com</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
             </div>
-        </div>
-      </div>
-    <footer>
+          <div class="large-4 columns">
+            <nav>
+              <ul>
+                <li class="dropdown">
+                  <a href="#" class="body-header">work</a>
+                   <h3 class="mobile-header">work</h3>
+                    <ul class="sub-menu text-menu">
+                      <li><a href="/about">about</a></li>
+                      <li><a href="/highlights">writing portfolio</a></li>
+                      <li><a href="/coding">coding portfolio</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          <div class="large-4 columns">
+            <nav>
+              <ul>
+                <li class="dropdown">
+                  <a href="#" class="body-header">social</a>
+                   <h3 class="mobile-header">social</h3>
+                    <ul class="sub-menu social-icons">
+                      <li><a href="#" class="fbook"></a></li>
+                      <li><a href="#" class="twitter"></a></li>
+                      <li><a href="#" class="tumblr"></a></li>
+                      <li><a href="#" class="github"></a></li>
+                    </ul>
+                  </li>
+              </ul>
+             </nav>
+            </div>
+          </div>
+         </div>
+    <!--<footer>
       <div class="row">
         <div class="large-12 columns">
           <p>&copy; Nick Neyland 2015</p>
         </div>
 
-    </footer>
+    </footer>-->
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
+    <script src="js/vendor/modernizr.js"></script>
+    <script src="js/custom.js"></script>
     <script>
       $(document).foundation();
     </script>
