--- a/highlights.html
+++ b/highlights.html
@@ -17,7 +17,7 @@
       </div>  -->
     </header>
     <div class="row body-text inner-page">
-      <div class="large-12 columns main-body">
+      <div class="large-12 columns main-body inner-body">
           <div class="large-offset-4 large-4 columns">
             <nav>
               <ul>
