social icon changes

--- a/highlights.html
+++ b/highlights.html
@@ -30,24 +30,12 @@
             </div>
           <div class="large-4 columns">
             <nav>
-              <ul>
-                <li class="dropdown">
-                  <a href="#" class="body-header">social</a>
-                   <h3 class="mobile-header">social</h3>
-                    <ul class="sub-menu social-icons">
+                    <ul class="social-icons">
                       <li><a href="#" class="fbook"></a></li>
                       <li><a href="#" class="twitter"></a></li>
                       <li><a href="#" class="tumblr"></a></li>
                       <li><a href="#" class="github"></a></li>
                     </ul>
-                     <ul class="mobile-menu social-icons">
-                      <li><a href="#" class="fbook"></a></li>
-                      <li><a href="#" class="twitter"></a></li>
-                      <li><a href="#" class="tumblr"></a></li>
-                      <li><a href="#" class="github"></a></li>
-                    </ul>
-                  </li>
-              </ul>
              </nav>
             </div>
           </div>
