--- a/highlights.html
+++ b/highlights.html
@@ -30,7 +30,7 @@
             </div>
           <div class="large-4 columns">
             <nav>
-                    <ul class="social-icons">
+                    <ul class="social-icons inner-icons">
                       <li><a href="#" class="fbook"></a></li>
                       <li><a href="#" class="twitter"></a></li>
                       <li><a href="#" class="tumblr"></a></li>
