--- a/coding.html
+++ b/coding.html
@@ -17,63 +17,25 @@
       </div>  -->
     </header>
     <div class="row body-text inner-page">
-      <div class="large-12 columns main-body">
-        <div class="large-4 columns">
-          <nav>
+      <div class="large-12 columns main-body inner-body">
+          <div class="large-offset-4 large-4 columns">
+            <nav>
               <ul>
                 <li class="dropdown">
-                  <a href="#" class="body-header">email</a>
-                  <h3 class="mobile-header">email</h3>
-                    <ul class="sub-menu email-menu">
-                      <li>nickneyland at</li>
-                      <li>gmail dot com</a></li>
-                    </ul>
-                    <ul class="mobile-menu email-menu">
-                      <li>nickneyland at</li>
-                      <li>gmail dot com</a></li>
-                    </ul>
+                  <a href="/index" class="body-header">home</a>
+                   <h3 class="mobile-header">home</h3>
                   </li>
                 </ul>
               </nav>
             </div>
           <div class="large-4 columns">
             <nav>
-              <ul>
-                <li class="dropdown">
-                  <a href="#" class="body-header">work</a>
-                   <h3 class="mobile-header">work</h3>
-                    <ul class="sub-menu text-menu">
-                      <li><a href="/highlights">writing portfolio</a></li>
-                      <li><a href="/coding">coding portfolio</a></li>
-                    </ul>
-                     <ul class="mobile-menu text-menu">
-                      <li><a href="/highlights">writing portfolio</a></li>
-                      <li><a href="/coding">coding portfolio</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-          <div class="large-4 columns">
-            <nav>
-              <ul>
-                <li class="dropdown">
-                  <a href="#" class="body-header">social</a>
-                   <h3 class="mobile-header">social</h3>
-                    <ul class="sub-menu social-icons">
+                    <ul class="social-icons inner-icons">
                       <li><a href="#" class="fbook"></a></li>
                       <li><a href="#" class="twitter"></a></li>
                       <li><a href="#" class="tumblr"></a></li>
                       <li><a href="#" class="github"></a></li>
                     </ul>
-                     <ul class="mobile-menu social-icons">
-                      <li><a href="#" class="fbook"></a></li>
-                      <li><a href="#" class="twitter"></a></li>
-                      <li><a href="#" class="tumblr"></a></li>
-                      <li><a href="#" class="github"></a></li>
-                    </ul>
-                  </li>
-              </ul>
              </nav>
             </div>
           </div>
